Update developer documentation to reflect changes in Spree Starter

--- a/docs/developer/customization/quickstart.mdx
+++ b/docs/developer/customization/quickstart.mdx
@@ -15,7 +15,7 @@ There are several ways you can achieve this:
 
     Changing currency, shipping zones, languages - it's very easy to do.
 
-    Go to **Admin > Configuration > General Settings**
+    Go to **Admin > Settings**
 
     <img src="/images/spree_admin_store_settings.png" alt="Spree Admin Store Settings" />
   </Accordion>
