--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -118,24 +118,38 @@ Welcome to the Spree Commerce [open-source eCommerce](https://spreecommerce.org)
 Feel free to explore your store. You can do so because Spree comes with a default pre-built Storefront and Admin Panel.
 
 <AccordionGroup>
-  <Accordion icon="key" title="Logging into the Admin Dashboard">
-    Use your browser window to navigate to [http://localhost:3000/admin](http://localhost:3000/admin). You can log in with the default credentials:
-
-    * login: `spree@example.com`
-
-    * password: `spree123`
-
-    Upon successful authentication, you should see the admin screen:
-
-    ![](https://vendo-production-res.cloudinary.com/image/upload/v1740668008/docs/admin_dashboard.png)
-
-    Feel free to explore some of the Admin Panel features that Spree has to offer and to verify that your installation is working properly.
-  </Accordion>
-
   <Accordion icon="palette" title="Browsing Storefront">
     Spree comes with a default pre-built Storefront. You can access it by navigating to [http://localhost:3000](http://localhost:3000).
 
+    <Frame caption="Spree Storefront">
+      <img src="/images/spree_storefront.png" />
+    </Frame>
+
     You can learn more about Storefront configuration in the [Storefront](/user/storefront/theme-editor) section.
+  </Accordion>
+
+  <Accordion icon="key" title="Logging into the Admin Dashboard">
+    Use your browser window to navigate to [http://localhost:3000/admin](http://localhost:3000/admin). You can log in with the default credentials:
+
+    login: 
+
+    ```
+    spree@example.com
+    ```
+
+    password: 
+
+    ```
+    spree123
+    ```
+
+    Upon successful authentication, you should see the admin screen:
+
+    <Frame caption="Spree Admin Dashboard">
+      <img src="/images/spree_admin_dashboard.png" />
+    </Frame>
+
+    Feel free to explore some of the Admin Panel features that Spree has to offer and to verify that your installation is working properly.
   </Accordion>
 </AccordionGroup>
 
