Add translations that are used in the spree_stripe gem (#12593)
* Add translations that are used in the spree_stripe gem

* Nomalize translations

* Do not consider `or_continue_below` as unused

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1334,6 +1334,7 @@ en:
     order: Order
     order_adjustments: Order adjustments
     order_again: Order again
+    order_already_completed: Order already completed
     order_already_updated: The order has already been updated.
     order_approved: Order approved
     order_canceled: Order canceled
