--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1923,6 +1923,7 @@ en:
     states_required: States Required
     status: Status
     stock: Stock
+    stock_items: Stock Items
     stock_location: Stock Location
     stock_location_info: Stock location info
     stock_locations: Stock Locations
