--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -67,8 +67,10 @@ Welcome to the Spree Commerce [open-source eCommerce](https://spreecommerce.org)
 
         And now install Ruby 3.3:
 
+        Before attempting to install Ruby, check that your build environment has the necessary tools and libraries.(https://github.com/rbenv/ruby-build/wiki#suggested-build-environment)
+
         ```bash
-        rbenv init && rbenv install && rbenv global 3.3.0
+        rbenv install 3.3.0 && rbenv global 3.3.0
         ```
 
     3. Install [Docker Desktop](https://docs.docker.com/get-docker)
