Fix method in the docs

--- a/docs/api-reference/storefront/stripe/mark-the-payment-intent-as-confirmed-and-move-the-order-to-the-complete-state.mdx
+++ b/docs/api-reference/storefront/stripe/mark-the-payment-intent-as-confirmed-and-move-the-order-to-the-complete-state.mdx
@@ -1,4 +1,4 @@
 ---
-openapi: post /api/v2/storefront/stripe/payment_intents/{id}/confirm
+openapi: patch /api/v2/storefront/stripe/payment_intents/{id}/confirm
 version: v5
 ---
