--- a/docs/developer/advanced/quick_checkout_with_stripe.mdx
+++ b/docs/developer/advanced/quick_checkout_with_stripe.mdx
@@ -8,6 +8,8 @@ description: This guide will show you how to add quick checkout to your custom s
   You also need [spree_stripe](https://github.com/spree/spree_stripe) gem in your Spree application
 </Warning>
 
+Spree Storefront with `spree_stripe` gem already has quick checkout built in, but if you like to add quick checkout to your custom storefront then this guide will help you with that
+
 Let's assume that you have a cart made with line items in it already.
 
 Quick checkout works by handling 3 different events:
