--- a/docs/developer/advanced/quick_checkout_with_stripe.mdx
+++ b/docs/developer/advanced/quick_checkout_with_stripe.mdx
@@ -1,6 +1,6 @@
 ---
 title: Completing the checkout via quick checkout with Stripe and Spree API
-description: This guide will show you how to add quick checkout to your custom storefront using Stripe and Spreee API
+description: This guide will show you how to add quick checkout to your custom storefront using Stripe and Spree APIs.
 ---
 
 <Warning>
@@ -8,7 +8,7 @@ description: This guide will show you how to add quick checkout to your custom s
   You also need [spree_stripe](https://github.com/spree/spree_stripe) gem in your Spree application
 </Warning>
 
-Spree Storefront with `spree_stripe` gem already has quick checkout built in, but if you like to add quick checkout to your custom storefront then this guide will help you with that
+Spree Storefront with the `spree_stripe` gem already has quick checkout built in, but if you like to add quick checkout to your custom storefront, then this guide will help you with that.
 
 Let's assume that you have a cart made with line items in it already.
 
@@ -21,15 +21,15 @@ How you should handle them depends on your platform/language:
 - When using Web and JS, you should look at the Express Checkout Element:
   - https://docs.stripe.com/elements/express-checkout-element
   - https://docs.stripe.com/js/element/express_checkout_element
-  - You can also check out the `spree_stripe` implementation here https://github.com/spree/spree_stripe/blob/main/app/javascript/spree_stripe/controllers/stripe_button_controller.js
-- On IOS, you should probably check out:
+  - You can also check out the `spree_stripe` implementation here: https://github.com/spree/spree_stripe/blob/main/app/javascript/spree_stripe/controllers/stripe_button_controller.js.
+- On iOS, you should probably check out:
   - `StripeApplePay` https://docs.stripe.com/apple-pay
   - `STPApplePayContext` https://stripe.dev/stripe-ios/stripeapplepay/documentation/stripeapplepay/stpapplepaycontext#instance-methods
 
-After you have a code which will handle those events, here's what you should do in each event:
+After you have a code that will handle those events, here's what you should do in each event:
 
 #### Address change
-Here we need to send some basic information about the customer's shipping address, and we should move the order to the delivery step (don't forget to replace the placeholders with customer's data):
+Here we need to send some basic information about the customer's shipping address, and we should move the order to the delivery step (don't forget to replace the placeholders with the customer's data):
 
 ```sh
 curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
@@ -50,7 +50,7 @@ curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
     }
   }'
 ```
-Spree documentation https://spreecommerce.org/docs/api-reference/storefront/checkout/update-checkout
+Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout/update-checkout
 
 Then you have to move the order to the delivery step:
 ```sh
@@ -62,11 +62,11 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=delivery&incl
     "shipping_method_id": <Shipping Method ID>
   }'
 ```
-Spree documentation https://spreecommerce.org/docs/api-reference/storefront/checkout-state/advance-checkout
+Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout-state/advance-checkout
 
-You don't have to send `shipping_method_id` if you don't have it yet, but if you received `Shipping Method/Rate changed` event, and you already have the selected shipping method then you can send it
+You don't have to send `shipping_method_id` if you don't have it yet, but if you received `Shipping Method/Rate changed` event, and you already have the selected shipping method, then you can send it.
 
-This will return you an order response, and you can update the payment element with new total and shipping rates
+This will return you an order response, and you can update the payment element with a new total (you should use `total_minus_store_credits` for total) and shipping rates.
 
 #### Shipping Method/Rate change
 
@@ -79,9 +79,9 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/select_shipping_method' \
     "shipping_method_id": <Shipping Method ID>
   }'
 ```
-Spree documentation https://spreecommerce.org/docs/api-reference/storefront/checkout-shipments/selects-shipping-method-for-shipments
+Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout-shipments/selects-shipping-method-for-shipments
 
-Subsequently, update the payment element with a new total taken from the response
+Subsequently, update the payment element with a new total taken from the response's `total_minus_store_credits`
 
 #### Confirming the payment
 
@@ -92,9 +92,9 @@ Now you should make several more calls to the backend
 curl -X POST '<SHOP URL>/api/v2/storefront/checkout/validate_order_for_payment?skip_state=true' \
   -H 'Authorization: Bearer <Token>'
 ```
-Spree documentation https://spreecommerce.org/docs/api-reference/storefront/checkout/validate-order-payment
+Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout/validate-order-payment
 
-2. You should have a lot more information about the customer (in previous events, Stripe probably will not provide you information such as customer address), so send them to backend:
+2. You should have a lot more information about the customer (in previous events, Stripe probably will not provide you information such as customer address), so send them to the backend:
 ```sh
 curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
   -H 'Authorization: Bearer <Token>' \
@@ -128,9 +128,9 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=payment' \
   }'
 ```
 
-Thereafter, you should confirm the payment intent using the Stripe library, this depends on your platform/language.
+Thereafter, you should confirm the payment intent using the Stripe library; this depends on your platform/language.
 
-If you like to redirect the user to the Spree's order summary page, then set the `return_url` when confirming the payment intent to `<SHOP URL>/stripe/payment_intents/<PAYMENT INTENT ID>`. This will check if the payment intent is confirmed, move the order to the complete state, and redirect the user to the order summary.
+If you like to redirect the user to Spree's order summary page, then set the `return_url` when confirming the payment intent to `<SHOP URL>/stripe/payment_intents/<PAYMENT INTENT ID>`. This will check if the payment intent is confirmed, move the order to the complete state, and redirect the user to the order summary.
 
 If you like to make the order summary page by yourself, then after confirming the payment intent in Stripe, make this request:
 
@@ -138,13 +138,13 @@ If you like to make the order summary page by yourself, then after confirming th
 curl -X POST <SHOP URL>/api/v2/storefront/stripe/payment_intents/<PAYMENT INTENT ID>/confirm \
   -H 'Authorization: Bearer <Token>'
 ```
-TODO: ADD documentation about this enpoint when PR is merged
+Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/stripe/mark-the-payment-intent-as-confirmed-and-move-the-order-to-the-complete-state
 
 This will also check if the payment intent is confirmed, and it will move the order to the complete state
 
 #### User cancels the payment
 
-If at any point user cancels the payment (closes the quick checkout sheet/modal) then clear the shipping and billing address from the order
+If at any point, the user cancels the payment (closes the quick checkout sheet/modal), then clear the shipping and billing address from the order.
 
 ```sh
 curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
@@ -157,3 +157,7 @@ curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
     }
   }'
 ```
+
+### All Done!
+
+Congrats! Now, your users should be able to pay for orders with quick checkout! Need support or want to give some feedback? You can join our [community](https://slack.spreecommerce.org/) or drop us an email at [hello@spreecommerce.org](mailto:hello@spreecommerce.org).
