--- a/docs/developer/guides/quick-checkout-with-stripe.mdx
+++ b/docs/developer/guides/quick-checkout-with-stripe.mdx
@@ -28,10 +28,17 @@ How you should handle them depends on your platform/language:
 
 After you have a code that will handle those events, here's what you should do in each event:
 
-#### Address change
+### Address change
 Here we need to send some basic information about the customer's shipping address, and we should move the order to the delivery step (don't forget to replace the placeholders with the customer's data):
 
-```sh
+<AccordionGroup>
+<Accordion title="Update the checkout">
+
+
+[Endpoint documentation](https://spreecommerce.org/docs/api-reference/storefront/checkout/update-checkout)
+
+
+```bash Update order [expandable]
 curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
   -H 'Authorization: Bearer <Token>' \
   -H 'Content-Type: application/json' \
@@ -50,9 +57,38 @@ curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
     }
   }'
 ```
-Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout/update-checkout
 
-Then you have to move the order to the delivery step:
+<ParamField body="quick_checkout" type="bool" required>
+    `true` indicating that the order is from quick checkout
+</ParamField>
+
+<ParamField body="firstname" type="string" required>
+  Customer's first name
+</ParamField>
+
+<ParamField body="lastname" type="string" required>
+  Customer's last name
+</ParamField>
+
+<ParamField body="zipcode" type="string" required>
+  Customer's zipcode
+</ParamField>
+
+<ParamField body="country_iso" type="string" required>
+  Customer's country iso
+</ParamField>
+
+<ParamField body="state_name" type="string">
+  Customer's address state
+</ParamField>
+
+<ParamField body="bill_address_id" type="string" required>
+  Set it to `CLEAR` to clear existing billing address (this prevents order to accidentaly advance to the `payment` step)
+</ParamField>
+</Accordion>
+<Accordion title="Move the order to the delivery step">
+[Endpoint documentation](https://spreecommerce.org/docs/api-reference/storefront/checkout-state/advance-checkout)
+
 ```sh
 curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=delivery&include=shipments.shipping_rates' \
   -H 'Authorization: Bearer <Token>' \
@@ -62,15 +98,27 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=delivery&incl
     "shipping_method_id": <Shipping Method ID>
   }'
 ```
-Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout-state/advance-checkout
 
-You don't have to send `shipping_method_id` if you don't have it yet, but if you received `Shipping Method/Rate changed` event, and you already have the selected shipping method, then you can send it.
+<ParamField body="quick_checkout" type="bool" required>
+  `true` indicating that the order is from quick checkout
+</ParamField>
+
+<ParamField body="shipping_method_id" type="string">
+  You don't have to send `shipping_method_id` if you don't have it yet, but if you received `Shipping Method/Rate changed` event, and you already have the selected shipping method, then you can send it.
+</ParamField>
 
 This will return you an order response, and you can update the payment element with a new total (you should use `total_minus_store_credits` for total) and shipping rates.
+</Accordion>
 
-#### Shipping Method/Rate change
+</AccordionGroup>
+
+
+### Shipping Method/Rate change
 
 Here we need to send the selected shipping method to the backend and update the total in the payment element
+
+[Endpoint documentation](https://spreecommerce.org/docs/api-reference/storefront/checkout-shipments/selects-shipping-method-for-shipments)
+
 ```sh
 curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/select_shipping_method' \
   -H 'Authorization: Bearer <Token>' \
@@ -79,22 +127,33 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/select_shipping_method' \
     "shipping_method_id": <Shipping Method ID>
   }'
 ```
-Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout-shipments/selects-shipping-method-for-shipments
+
+<ParamField body="shipping_method_id" type="string" required>
+  Shipping method id of the selected shipping rate
+</ParamField>
 
 Subsequently, update the payment element with a new total taken from the response's `total_minus_store_credits`
 
-#### Confirming the payment
+### Confirming the payment
 
 Now you should make several more calls to the backend
 
-1. Confirm that the order is ready for the payment
+<AccordionGroup>
+<Accordion title="Confirm that the order is ready for the payment">
+[Endpoint documentation](https://spreecommerce.org/docs/api-reference/storefront/checkout/validate-order-payment)
 ```sh
 curl -X POST '<SHOP URL>/api/v2/storefront/checkout/validate_order_for_payment?skip_state=true' \
   -H 'Authorization: Bearer <Token>'
 ```
-Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/checkout/validate-order-payment
 
-2. You should have a lot more information about the customer (in previous events, Stripe probably will not provide you information such as customer address), so send them to the backend:
+If you receive response code other than `200` then something changed in the order and it can't be moved to the payment state yet
+</Accordion>
+
+
+<Accordion title="Update the address with more data">
+
+You should have a lot more information about the customer (in previous events, Stripe probably will not provide you information such as customer address), so send them to the backend:
+
 ```sh
 curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
   -H 'Authorization: Bearer <Token>' \
@@ -119,7 +178,10 @@ curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
   }'
 ```
 
-3. Move the order to the payment step
+</Accordion>
+
+
+<Accordion title="Move the order to the payment step">
 ```sh
 curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=payment' \
   -H 'Authorization: Bearer <Token>' \
@@ -127,6 +189,12 @@ curl -X PATCH '<SHOP URL>/api/v2/storefront/checkout/advance?state=payment' \
     "shipping_method_id": <Shipping Method ID>
   }'
 ```
+<ParamField body="shipping_method_id" type="string" required>
+  Shipping method id of the selected shipping rate
+</ParamField>
+</Accordion>
+</AccordionGroup>
+
 
 Thereafter, you should confirm the payment intent using the Stripe library; this depends on your platform/language.
 
@@ -141,6 +209,8 @@ curl -X POST <SHOP URL>/api/v2/storefront/stripe/payment_intents/<PAYMENT INTENT
 Spree documentation: https://spreecommerce.org/docs/api-reference/storefront/stripe/mark-the-payment-intent-as-confirmed-and-move-the-order-to-the-complete-state
 
 This will also check if the payment intent is confirmed, and it will move the order to the complete state
+
+
 
 #### User cancels the payment
 
