--- a/docs/developer/guides/quick-checkout-with-stripe.mdx
+++ b/docs/developer/guides/quick-checkout-with-stripe.mdx
@@ -70,6 +70,10 @@ curl -X PATCH <SHOP URL>/api/v2/storefront/checkout \
   Customer's last name
 </ParamField>
 
+<ParamField body="city" type="string" required>
+  Customer's city
+</ParamField>
+
 <ParamField body="zipcode" type="string" required>
   Customer's zip code
 </ParamField>
