--- a/docs/api-reference/tutorials/quick-checkout-with-stripe.mdx
+++ b/docs/api-reference/tutorials/quick-checkout-with-stripe.mdx
@@ -216,11 +216,11 @@ Now you should make several more calls to the backend
     94043
   </ParamField>
 
-  <ParamField body="country_iso" type="string">
+  <ParamField body="country_iso" type="string" required>
     US
   </ParamField>
 
-  <ParamField body="state_name" type="string">
+  <ParamField body="state_name" type="string" required>
     CA
   </ParamField>
 
