Open source integrations - add model, controller and views to spree/admin

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -328,6 +328,9 @@ en:
       spree/digital:
         one: Digital asset
         other: Digital assets
+      spree/integration:
+        one: Integration
+        other: Integrations
       spree/inventory_unit:
         one: Inventory Unit
         other: Inventory Units
