Open source integrations (#12618)
* Open source integrations - add model, controller and views to spree/admin

* Improve grouping of integrations

* Use preference_fields for integration forms

* Fix the code injection issue for the integrations controller

* Add more customization options to the integration form

* Add the integrations helper to the StoreController

* Adjusted Integrations UI, added customization for the form guide, added sizing options for Integration icons

* Normalize i18n

* Add basic integration model spec

* Update the integration form

* Remove the generated integration form - we'll always use custom forms

* Add docs to the integration model

* Correct form actions

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -75,6 +75,9 @@ en:
       export_only_filtered_records: Export only filtered records, matching the search criteria
       filters: Filters
       getting_started: Getting started
+      integrations:
+        invalid_integration_type: This integration is not allowed
+        page_subtitle: Connect your store to third-party services to enhance customer experience.
       manage_currencies: Manage Currencies
       manage_properties: Manage Properties
       manage_stock_locations: Manage Stock Locations
