--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1131,17 +1131,18 @@ en:
     inventory_error_flash_for_insufficient_quantity: An item in your cart has become unavailable.
     inventory_state: Inventory State
     invitation_accepted: Invitation accepted!
-    invitation_revoked: Invitation revoked!
     invitation_mailer:
       greeting: Hi %{user_name},
-      thanks: Thank you,
-      invitation_email:
-        subject: Invitation to join %{resource_name}
-        body: "%{inviter_name} has invited you to join %{resource_name}"
-        link_description: "To accept this invitation, please click the link below:"
       invitation_accepted:
-        subject: "%{invitee_name} has accepted your invitation to join %{resource_name}"
         body: "%{invitee_name} has accepted your invitation to join %{resource_name}"
+        subject: "%{invitee_name} has accepted your invitation to join %{resource_name}"
+      invitation_email:
+        body: "%{inviter_name} has invited you to join %{resource_name}"
+        link_description: 'To accept this invitation, please click the link below:'
+        subject: Invitation to join %{resource_name}
+      thanks: Thank you,
+    invitation_resent: Invitation resent!
+    invitation_revoked: Invitation revoked!
     is_not_available_to_shipment_address: is not available to shipment address
     iso: ISO Alpha-2
     iso3: ISO Alpha-3
