fix: allow guest checkout when order is created by logged in user

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -795,6 +795,7 @@ en:
     continue_as_guest: Continue as a guest
     continue_selling_when_out_of_stock: Continue selling when out of stock
     continue_shopping: Continue shopping
+    continue_without_logging_in: Continue without logging in
     copy: Copy
     copy_id: Copy ID
     copy_link: Copy link
