--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -53,8 +53,8 @@ en:
       spree/inventory_unit:
         state: State
       spree/invitation:
-        inviter: Inviter
         expires_at: Expires at
+        inviter: Inviter
       spree/line_item:
         price: Price
         quantity: Quantity
@@ -197,6 +197,10 @@ en:
       spree/zone:
         description: Description
         name: Name
+      user:
+        current_sign_in: Current sign in at
+        last_sign_in: Last sign in at
+        sign_in_count: Sign in count
     errors:
       messages:
         blank: can't be blank
@@ -832,8 +836,8 @@ en:
     create_new_order: Create new order
     create_new_team: Create new team
     create_reimbursement: Create reimbursement
-    created_at: Created At
-    created_by: Created By
+    created_at: Created at
+    created_by: Created by
     credit: Credit
     credit_allowed: Credit allowed
     credit_card: Credit Card
@@ -1146,8 +1150,8 @@ en:
         subject: Invitation to join %{resource_name}
       thanks: Thank you,
     invitation_resent: Invitation resent!
-    invitation_revoked: Invitation revoked!
     invitations: Invitations
+    invited_by: Invited by
     is_not_available_to_shipment_address: is not available to shipment address
     iso: ISO Alpha-2
     iso3: ISO Alpha-3
@@ -1535,8 +1539,8 @@ en:
     pending_sale: Pending Sale
     percent: Percent
     percent_per_item: Percent Per Item
-    permissions: Permissions
     permalink: Permalink
+    permissions: Permissions
     personal_details: Personal details
     phone: Phone
     place_order: Place Order
@@ -2159,7 +2163,7 @@ en:
     update_billing_address: Update billing address
     update_contact_information: Update contact information
     update_shipping_address: Update shipping address
-    updated: Updated
+    updated_at: Updated at
     updating: Updating
     upload_image: Upload image
     url: URL
