--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1130,6 +1130,7 @@ en:
     internationalization: Internationalization
     invalid_credit_card: Invalid credit card.
     invalid_exchange_variant: Invalid exchange variant.
+    invalid_or_expired_invitation: Invalid or expired invitation
     invalid_payment_provider: Invalid payment provider.
     invalid_promotion_action: Invalid promotion action.
     invalid_promotion_rule: Invalid promotion rule.
