--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -19,7 +19,6 @@ en:
               active: Setting products to active will make those products available on the storefront.
               archived: Setting products to archived will hide them from storefront.
               draft: Setting products to draft will hide them from storefront.
-              ready_for_review: We will notify your partners that these products are ready for review. Your partners will be able to review and publish these products.
           status_updated: Status updated
           title:
             add_tags: Add tags
@@ -163,7 +162,7 @@ en:
         by_stock: By stock
         deleted: Deleted
         draft: Draft
-        help_bubble: Draft & Ready for Review statuses mean that the product isn't available for purchase. Active means that the product is live. Vendors can move product from draft to ready for review, but only marketplace operators can move product from ready for review to active
+        help_bubble: Draft products aren't available for purchase. Active products are live.
         in_stock: In Stock
         inventory:
           barcode: Barcode (ISBN, UPC, GTIN, etc.)
@@ -178,7 +177,7 @@ en:
           available_on: Marks when the product will be released, put a future date to indicate that this is a pre-order
           discontinue_on: Marks when the product should be automatically taken off from your site
           make_active_at: Marks when the product should be automatically promoted to "active" state
-          status: Draft - initial status. Ready For Review - inform store owner that product can be checked before activation
+          status: Draft products aren't available for purchase. Active products are live.
         stores:
           choose_stores: Choose which stores this product should be available in
         variants:
