--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1042,6 +1042,8 @@ en:
     font_size_scale: Font size scale
     fonts: Fonts
     footer: Footer
+    forbidden: Access denied
+    forbidden_message: You are not authorized to access this page.
     forgot_password: Forgot password?
     free: Free
     free_shipping: Free Shipping
