Improve storefront docs SEO and added missing command

--- a/docs/developer/storefront/custom-css.mdx
+++ b/docs/developer/storefront/custom-css.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Custom CSS"
+title: "Custom CSS for Spree Storefront"
+sidebarTitle: "Custom CSS"
 description: "Learn how to add custom CSS stylesheets of your Spree storefront"
 ---
 
