--- a/docs/developer/storefront/custom-javascript.mdx
+++ b/docs/developer/storefront/custom-javascript.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Custom JavaScript"
+title: "Custom JavaScript for Spree Storefront"
+sidebarTitle: "Custom JavaScript"
 description: "Learn how to add custom JavaScript to your Spree storefront"
 ---
 
