--- a/docs/developer/storefront/storefront.mdx
+++ b/docs/developer/storefront/storefront.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Overview"
+title: "Storefront Overview"
+sidebarTitle: "Overview"
 ---
 
 Spree 5 ships with a new mobile-first storefront that is fully customizable & themeable.
