--- a/docs/developer/storefront/links.mdx
+++ b/docs/developer/storefront/links.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Links"
+sidebarTitle: "Links"
 ---
 
 Links are used to create the navigation of the storefront. They can be assigned to Sections and Blocks.
